--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5",
     "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-voice/voice": "^3.2.4",
-    "@react-navigation/native": "^7.1.4",
     "@reduxjs/toolkit": "^2.6.1",
     "expo": "~52.0.43",
     "expo-av": "~15.0.2",
+    "expo-camera": "~16.0.18",
     "expo-haptics": "~14.0.1",
-    "expo-speech": "~13.0.1",
+    "expo-image-manipulator": "~13.0.6",
+    "expo-image-picker": "~16.0.6",
+    "expo-media-library": "~17.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-auto-height-image": "^3.2.4",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
