--- a/package.json
+++ b/package.json
@@ -9,26 +9,34 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.9.7",
+    "@expo/webpack-config": "^19.0.1",
     "@gorhom/bottom-sheet": "^5",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@reduxjs/toolkit": "^2.6.1",
     "expo": "~52.0.43",
+    "expo-auth-session": "~6.0.3",
     "expo-av": "~15.0.2",
     "expo-camera": "~16.0.18",
+    "expo-crypto": "~14.0.2",
     "expo-haptics": "~14.0.1",
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "~16.0.6",
     "expo-media-library": "~17.0.6",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.1",
+    "expo-web-browser": "~14.0.2",
+    "firebase": "^11.6.0",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.76.9",
     "react-native-auto-height-image": "^3.2.4",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
